Fixed nowrap issue
https://github.com/topcoat/topcoat/issues/392
Replaced the value and fixed the test

--- a/src/button-bar.styl
+++ b/src/button-bar.styl
@@ -20,7 +20,7 @@
 .button-bar {
   display: table;
   table-layout: fixed;
-  white-space: no-wrap;
+  white-space: nowrap;
   margin: 0;
   padding: 0;
 }
